--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -13,6 +13,8 @@
         }
       </script>
 
+
+
     <style>
         .bg-image-vertical {
 position: relative;
@@ -30,6 +32,14 @@ height: 100%;
     </style>
 </head>
 <body>
+  <script>
+    function onSubmit(token) {
+      document.getElementById("login-form").submit();
+    }
+
+  </script>
+
+
     <section class="vh-100">
         <div class="container-fluid">
           <div class="row">
